--- a/.env.example
+++ b/.env.example
@@ -3,7 +3,7 @@ APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
 APP_URL=http://localhost
-APP_TZ="America/Argentina"
+APP_TZ="America/Argentina/Buenos_Aires"
 
 LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
