--- a/.env.example
+++ b/.env.example
@@ -29,6 +29,11 @@ REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
+SCOUT_DRIVER='database'
+SCOUT_QUEUE=true
+SCOUT_PREFIX=''
+SCOUT_IDENTIFY=false
+
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
 MAIL_PORT=1025
