--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,9 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
+        "laravel/scout": "^10.0",
         "laravel/tinker": "^2.7",
+        "livewire/livewire": "^2.12",
         "spatie/laravel-permission": "^5.10"
     },
     "require-dev": {
