--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/scout": "^10.0",
         "laravel/tinker": "^2.7",
         "livewire/livewire": "^2.12",
-        "spatie/laravel-permission": "^5.10"
+        "spatie/laravel-permission": "^5.10",
+        "wire-elements/modal": "^1.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
